# chielfstaker

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  idl.json
.github/workflows/: verifiable-build.yml
programs/chiefstaker/: Cargo.toml
programs/chiefstaker/src/: error.rs  events.rs  lib.rs  math.rs  state.rs
programs/chiefstaker/src/instructions/: cancel_unstake.rs  claim.rs  close_stake.rs  complete_unstake.rs  deposit.rs  fix_total_reward_debt.rs  initialize.rs  mod.rs  recover_stranded.rs  request_unstake.rs  set_metadata.rs  stake.rs  stake_on_behalf.rs  sync.rs  sync_rewards.rs  transfer_authority.rs  unstake.rs  update_settings.rs
scripts/: build-sbf.sh  deploy-program.sh  measure-exact-cu.sh  publish-idl.sh  run-e2e-cu-test.sh  run-e2e-tests.sh  setup-cli.sh  start-validator.sh  test-zk-verifier.sh  verify-deploy.sh
tests/typescript/: package-lock.json  package.json  test_staking.ts
