[package]
name = "chiefstaker"
version = "0.1.0"
edition = "2021"
description = "Token 2022 staking with time-weighted rewards"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
borsh = "1.5"
uint = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1", features = ["full"] }
